--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>sibs.common</groupId>
-        <artifactId>common-parent</artifactId>
-        <version>1.00.20</version>
-    </parent>
-
-    <groupId>com.sibs.sample</groupId>
-    <artifactId>sample-app</artifactId>
+    <groupId>com.winning.sample</groupId>
+    <artifactId>sample-java-app</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
